<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_header" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/LogoPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_appbar_smartcall" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Appel Terminé"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/contact_call_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                 android:background="@drawable/edit_text"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/evaluate_title" />

                <RatingBar
                    android:id="@+id/ratingEvaluate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:layout_margin="4dp"
                    style="@style/evaluateRatingBar"  />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                         android:textColor="@color/black"
                        android:text="@string/evaluate_bad" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                         android:textColor="@color/black"
                        android:text="@string/evaluate_good" />

                </RelativeLayout>

                

            </LinearLayout>
<EditText
                android:id="@+id/editComment"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/edit_text"
                android:layout_marginTop="32dp"
                android:padding="5dp"
                android:ems="10"
                android:hint="@string/evaluate_comment"
                android:gravity="top|center"
                android:inputType="textMultiLine"
                android:maxLines="5" >
                 </EditText>

<LinearLayout
    android:id="@+id/buttonSend"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="right|center_vertical"
    android:layout_marginTop="16dp"
     >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/evaluate_send"
        android:textColor="@color/white"
        
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@android:drawable/ic_menu_send" />

</LinearLayout>

        </LinearLayout>
    </ScrollView>
  
      <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="16dp" />
        <ImageView
                android:id="@+id/imageSwipUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/swipe_up" />
</RelativeLayout>
